remove some files

--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>pgweb</title>
+  <title>Database Workbench</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
@@ -74,7 +74,7 @@
 
   <div id="connection_window">
     <div class="connection-settings">
-      <h1>pgweb</h1>
+      <h1>Database Workbench</h1>
 
       <form role="form" class="form-horizontal" id="connection_form">
         <div class="text-center">
