--- a/s/index.html
+++ b/s/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
-  <link rel="stylesheet" href="/static/css/bootstrap.css"></link>
-  <link rel="stylesheet" href="/static/css/font-awesome.css"></link>
-  <link rel="stylesheet" href="/static/css/app.css"></link>
-  <script type="text/javascript" src="/static/js/jquery.js"></script>
-  <script type="text/javascript" src="/static/js/ace.js"></script>
-  <script type="text/javascript" src="/static/js/ace-pgsql.js"></script>
-  <script type="text/javascript" src="/static/js/app.js"></script>
+  <link rel="stylesheet" href="/s/css/bootstrap.css"></link>
+  <link rel="stylesheet" href="/s/css/font-awesome.css"></link>
+  <link rel="stylesheet" href="/s/css/app.css"></link>
+  <script type="text/javascript" src="/s/js/jquery.js"></script>
+  <script type="text/javascript" src="/s/js/ace.js"></script>
+  <script type="text/javascript" src="/s/js/ace-pgsql.js"></script>
+  <script type="text/javascript" src="/s/js/app.js"></script>
 </head>
 <body>
   <div id="main">
