move 3rd party js libraries to lib/ subdirectory

--- a/s/index.html
+++ b/s/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="/s/css/bootstrap.css"></link>
   <link rel="stylesheet" href="/s/css/font-awesome.css"></link>
   <link rel="stylesheet" href="/s/css/app.css"></link>
-  <script type="text/javascript" src="/s/js/jquery.js"></script>
-  <script type="text/javascript" src="/s/js/ace.js"></script>
-  <script type="text/javascript" src="/s/js/ace-pgsql.js"></script>
+  <script type="text/javascript" src="/s/js/lib/jquery.js"></script>
+  <script type="text/javascript" src="/s/js/lib/ace.js"></script>
+  <script type="text/javascript" src="/s/js/lib/ace-pgsql.js"></script>
   <script type="text/javascript" src="/s/js/app.js"></script>
 </head>
 <body>
