--- a/s/index_react.html
+++ b/s/index_react.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Language" content="en">
   <link rel="stylesheet" href="/s/css/bootstrap.css"></link>
   <link rel="stylesheet" href="/s/css/font-awesome.css"></link>
-  <link rel="stylesheet" href="/s/css/app.css"></link>
+  <link rel="stylesheet" href="/s/css/app_react.css"></link>
   <script type="text/javascript" src="/s/js/lib/react-with-addons-0.13.2.js"></script>
   <script type="text/javascript" src="/s/js/lib/jquery.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace.js"></script>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div id ="root">
+  <div id ="main">
   </div>
 
   <script src="/s/js/bundle.js"></script>
