--- a/s/index.html
+++ b/s/index.html
@@ -78,6 +78,7 @@
   <div id="connection_window">
     <div class="connection-settings">
       <h1>Database Workbench</h1>
+      <h1><a href="/react">rect version</a></h1>
 
       <form role="form" class="form-horizontal" id="connection_form">
         <div class="text-center">
