start on sign in form

--- a/s/index.html
+++ b/s/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
-  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-paper.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-lumen.css"/>
   <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
   <link type="text/css" rel="stylesheet" href="/s/css/main.css"/>
   <script type="text/javascript" src="/s/js/lib/react-with-addons-0.13.2.js"></script>
