add html-inspector.js to experiment with it

--- a/s/index.html
+++ b/s/index.html
@@ -28,6 +28,7 @@
 
   <script type="text/javascript" src="/s/js/bundle.js"></script>
   <script type="text/javascript">window.runOnLoad(window.appStart);</script>
+  <script type="text/javascript" src="/s/js/html-inspector.js"></script>
 
 </body>
 </html>
