remember connection string and connection time

--- a/s/index.html
+++ b/s/index.html
@@ -28,6 +28,7 @@
 
   <script type="text/javascript" src="/s/js/bundle.js"></script>
   <script type="text/javascript">window.runOnLoad(window.appStart);</script>
+  <!-- TODO: only do that in dev mode or when user is admin -->
   <script type="text/javascript" src="/s/js/html-inspector.js"></script>
 
 </body>
