convert webpack to gulp

--- a/s/index.html
+++ b/s/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="/s/js/lib/jquery.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace-pgsql.js"></script>
-  <script type="text/javascript" src="/s/js/bundle.js"></script>
+  <script type="text/javascript" src="/s/dist/bundle.js"></script>
   <script type="text/javascript">
     var gUserInfo = null;
     function setUserInfo(json) {
@@ -26,10 +26,7 @@
   <div id ="main">
   </div>
 
-  <script type="text/javascript" src="/s/js/bundle.js"></script>
   <script type="text/javascript">window.runOnLoad(window.appStart);</script>
-  <!-- TODO: only do that in dev mode or when user is admin -->
-  <script type="text/javascript" src="/s/js/html-inspector.js"></script>
 
 </body>
 </html>
