website: real screenshot; proper download link

--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Database Workbench for Postgres for Mac">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Database Workbench for Postgres for Mac</title>
-  <script src="//kjkpub.s3.amazonaws.com/software/patheditor/latestver.js" type="text/javascript"></script>
+  <script src="//kjkpub.s3.amazonaws.com/software/databaseworkbench/latestverwin.js" type="text/javascript"></script>
   <script>
     function $(id) {
       if (document.all)
@@ -26,7 +26,7 @@
     }
 
     function build_html() {
-      return a(pathEditorLatestUrl, "<span>Download</span>")
+      return a(LatestUrlWin, "<span>Download</span>")
     }
 
     function myInit() {
@@ -53,7 +53,7 @@
           </p>
         </td>
         <td style="vertical-align: top;">
-          <img src="http://blog.kowalczyk.info/software/patheditor/img/main.png" alt="Database Workbench screenshot">
+          <img src="http://i.imgur.com/IGCuvun.png" alt="Database Workbench screenshot">
         </td>
       </tr>
     </table>
