--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -45,7 +45,7 @@
       <tr>
         <td style="vertical-align: top; min-width:300px; padding-right:32px;	">
           <h1 style="display:inline;">Database Workbench</h1>
-          <span>&nbsp;for Mac</span>
+          <span>&nbsp;for Mac 2</span>
           <p>GUI for Postgres database.</p>
           <p><b>Requirements:</b> OS X 10.9 or later</p>
           <p>
