--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Database Workbench for Postgres for Mac">
   <link rel="stylesheet" type="text/css" href="main.css">
   <title>Database Workbench for Postgres for Mac</title>
-  <script src="//kjkpub.s3.amazonaws.com/software/databaseworkbench/latestverwin.js" type="text/javascript"></script>
+  <script src="//kjkpub.s3.amazonaws.com/software/databaseworkbench/latestvermac.js" type="text/javascript"></script>
   <script>
     function $(id) {
       if (document.all)
@@ -26,7 +26,7 @@
     }
 
     function build_html() {
-      return a(LatestUrlWin, "<span>Download</span>")
+      return a(LatestUrlMac, "<span>Download</span>")
     }
 
     function myInit() {
