--- a/s/index.html
+++ b/s/index.html
@@ -5,14 +5,17 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
-  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-flatly.css"/>
-  <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
-  <link type="text/css" rel="stylesheet" href="/s/css/main.css"/>
-  <script type="text/javascript" src="/s/js/lib/react-with-addons-0.13.2.js"></script>
+
+  <!-- TODO: Delete react stuff which are not used in path /s/js/lib/ -->
+
   <script type="text/javascript" src="/s/js/lib/jquery.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace-pgsql.js"></script>
   <script type="text/javascript" src="/s/dist/bundle.js"></script>
+  <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-flatly.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/css/main.css"/>
+
   <script type="text/javascript">
     var gUserInfo = null;
     function setUserInfo(json) {
