more DBHero renames

--- a/s/index.html
+++ b/s/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Database Workbench</title>
+  <title>DB Hero</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Language" content="en">
-
-  <!-- TODO: Delete react stuff which are not used in path /s/js/lib/ -->
 
   <script type="text/javascript" src="/s/js/lib/jquery.js"></script>
   <script type="text/javascript" src="/s/js/lib/ace.js"></script>
