--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -4,9 +4,9 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="Database Workbench for Postgres for Mac">
+  <meta name="description" content="dbHero for Postgresql for Mac">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Database Workbench for Postgres for Mac</title>
+  <title>dbHero for Postgresql for Mac</title>
   <script src="//kjkpub.s3.amazonaws.com/software/dbhero/latestvermac.js" type="text/javascript"></script>
   <script>
     function $(id) {
@@ -44,7 +44,7 @@
     <table cellspacing="0" cellpadding="0">
       <tr>
         <td style="vertical-align: top; min-width:300px; padding-right:32px;	">
-          <h1 style="display:inline;">Database Workbench</h1>
+          <h1 style="display:inline;">dbHero</h1>
           <span>&nbsp;for Mac</span>
           <p>GUI for Postgres database.</p>
           <p><b>Requirements:</b> OS X 10.9 or later</p>
@@ -53,7 +53,7 @@
           </p>
         </td>
         <td style="vertical-align: top;">
-          <img src="http://i.imgur.com/IGCuvun.png" alt="Database Workbench screenshot">
+          <img src="http://i.imgur.com/IGCuvun.png" alt="dbHero screenshot">
         </td>
       </tr>
     </table>
