--- a/website/www/index.html
+++ b/website/www/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en>
   <meta charset=utf-8>
-  <title>Database Workbench for PostgreSQ, by Database ExpertsL</title>
+  <title>dbHero for PostgreSQL, by Database ExpertsL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato:400,900'>
@@ -25,7 +25,7 @@
     </div>
     <div class='hero'>
       <div class='container text-center'>
-        <h1 class='color-blue'>Database Workbench</h1>
+        <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
           A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
         </h4>
