--- a/website/www/index.html
+++ b/website/www/index.html
@@ -1,31 +1,36 @@
 <!doctype html>
 <html lang=en>
   <meta charset=utf-8>
-  <title>Database Workbench for PostgreSQ, by Database ExpertsL</title>
+  <title>dbHero for PostgreSQL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato:400,900'>
-  <link rel=stylesheet href="/s/style.css">
+
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel='stylesheet' href="/s/style.css">
+  <link rel='stylesheet' href="/s/main.css">
+
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script> <!-- Source: https://github.com/kenwheeler/slick -->
 
   <div>
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='http://nerds.airbnb.com/airpal' target='_blank' class='link'>
-            Overview
+          <a href='/support' target='_blank' class='link'>
+            Support
           </a>
-          <a href='https://github.com/airbnb/airpal/tree/master/docs' target='_blank' class='link'>
-            Documentation
-          </a>
-          <a href='https://github.com/airbnb/airpal/' target='_blank' class='link'>
-            Github
+          <a href='/feedback' target='_blank' class='link'>
+            Feedback
           </a>
         </div>
       </nav>
     </div>
     <div class='hero'>
       <div class='container text-center'>
-        <h1 class='color-blue'>Database Workbench</h1>
+        <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
           A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
         </h4>
@@ -40,12 +45,11 @@
         -->
 
         <div class='demo'>
-          <div class='browser'>
-            <span class='dot dot-red'></span>
-            <span class='dot dot-yellow'></span>
-            <span class='dot dot-green'></span>
+          <div class="single-item">
+            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/loginpage.png' /></div>
           </div>
-          <img src='./demo.gif' />
         </div>
       </div>
     </div>
@@ -113,5 +117,16 @@
       var s = document.getElementsByTagName('script')[0];
       s.parentNode.insertBefore(ga, s);
     })();
+
+    // Slider
+    $('.single-item').slick({
+      dots: true,
+      arrows: true,
+      autoplay: true,
+      autoplaySpeed: 2000,
+      draggable: true,
+      // centerMode: true,
+    });
+
   </script>
 </html>
