--- a/website/www/index.html
+++ b/website/www/index.html
@@ -8,43 +8,63 @@
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato:400,900'>
 
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-  <link rel='stylesheet' href="/s/style.css">
-  <link rel='stylesheet' href="/s/main.css">
-
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick/slick.min.js"></script> <!-- Source: https://github.com/kenwheeler/slick -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel='stylesheet' href="/s/style.css">
+  <!-- <link rel='stylesheet' href="/s/main.css"> -->
 
   <div>
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/support' target='_blank' class='link'>
+          <a href='#' class='link'>
+            Mac
+          </a>
+          <a href='#' class='link'>
+            Windows
+          </a>
+          <a href='/support' class='link'>
             Support
           </a>
-          <a href='/feedback' target='_blank' class='link'>
+          <a href='/feedback' class='link'>
             Feedback
           </a>
         </div>
       </nav>
     </div>
-    <div class='hero'>
-      <div class='container text-center'>
+    <div class='hero text-center'>
+      <div class='container'>
         <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
           A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
         </h4>
 
-        <!--
+
         <div class='callouts'>
           <a href='https://github.com/airbnb/airpal#airpal' target='_blank'
              class='btn color-blue border-blue'>
-              Get Started
+             <i class="fa fa-apple" style="margin-right: 8px;"></i>
+              Download for Mac
           </a>
         </div>
-        -->
+
+        <div class='callouts'>
+          <a href='https://github.com/airbnb/airpal#airpal' target='_blank'
+             class='btn color-blue border-blue'>
+             <i class="fa fa-windows" style="margin-right: 8px;"></i>
+              Download for Windows
+          </a>
+        </div>
+
+
+
+
+
 
         <div class='demo'>
           <div class="single-item">
@@ -53,56 +73,45 @@
             <div><img src='./img/loginpage.png' /></div>
           </div>
         </div>
+
       </div>
     </div>
-    <div class='flex-row container features'>
+    <div class='container features'>
       <div>
-        <h3 class='color-dark-gray'>Facilitate Analysis</h3>
+        <h3 class='color-dark-gray'>Simple UI</h3>
         <p>
-          No more copying and pasting in the
-          command line interface. Airpal reduces
-          the friction involved in data analysis
-          by making it easy to find tables, run
-          queries, save analysis, and get results
-          on your desktop.
+          Good looking and intuitive.
         </p>
       </div>
       <div>
-        <h3 class='color-dark-gray'>Drive SQL Adoption</h3>
+        <h3 class='color-dark-gray'>Stable, fast, and secure</h3>
         <p>
-          At organizations with different levels
-          of analysis sophistication, Airpal helps
-          make it easy for beginners to explore datasets
-          and write queries.
+          Works on your on your machine. Requests are encripted and secure.
         </p>
       </div>
       <div>
-        <h3 class='color-dark-gray'>Manage Access</h3>
+        <h3 class='color-dark-gray'>Features</h3>
         <p>
-          Airpal can act as a security layer on top of
-          Presto, where administrators can designate
-          certain tables as accessible for certain
-          groups of users.
+          Multiple database bookmarks. Table information. Table indexes. Custom query. Explain query. Query history. Latest activities on database and more..
         </p>
       </div>
     </div>
 
     <div class='container text-center github footer'>
-<!--
-      <a href='http://nerds.airbnb.com' target='_blank' class='link'>
-        Blog
+      <a href='#' target='_blank' class='link'>
+        Mac
       </a>
-      <a href='https://github.com/airbnb' target='_blank' class='link'>
-        Open Source
+      <a href='#' target='_blank' class='link'>
+        Windows
       </a>
-      <a href='http://nerds.airbnb.com/engineering-culture-airbnb/' target='_blank' class='link'>
-        Culture
+      <a href='/support' class='link'>
+        Support
       </a>
-      <a href='https://www.airbnb.com/jobs/departments/engineering' target='_blank' class='link'>
-        Careers
+      <a href='/feedback' class='link'>
+        Feedback
       </a>
     </div>
--->
+
   </div>
 
   <script>
