--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -1,69 +1,154 @@
-
 <!doctype html>
 <html>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="description" content="dbHero for Postgresql for Windows">
-  <link rel="stylesheet" type="text/css" href="main.css">
-  <title>dbHero for Postgresql for Windows</title>
+<!doctype html>
+<html lang=en>
+  <meta charset=utf-8>
+
+  <title>dbHero for PostgreSQL</title>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+  <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato:400,900'>
+
   <script src="//kjkpub.s3.amazonaws.com/software/dbhero/latestverwin.js" type="text/javascript"></script>
+
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script> <!-- Source: https://github.com/kenwheeler/slick -->
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel='stylesheet' href="/s/style.css">
+  <!-- <link rel='stylesheet' href="/s/main.css"> -->
+
+  <div>
+    <div class='nav-container'>
+      <nav class='container'>
+        <div class='links'>
+          <a href='/for-mac' class='link'>
+            Mac
+          </a>
+          <a href='/for-windows' class='link'>
+            Windows
+          </a>
+          <a href='/support' class='link'>
+            Support
+          </a>
+          <a href='/feedback' class='link'>
+            Feedback
+          </a>
+        </div>
+      </nav>
+    </div>
+    <div class='hero text-center'>
+      <div class='container'>
+        <h1 class='color-blue'>dbHero</h1>
+        <h4 class='subtitle color-dark-gray'>
+          A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
+        </h4>
+
+        <div class='callouts'>
+          <!-- <a id="download-button" href='#' target='_blank' class='btn color-blue border-blue'>
+             <i class="fa fa-apple" style="margin-right: 8px;"></i>
+              Download for Mac
+          </a> -->
+          <span id="download-button"></span>
+          <p style='margin-top: 30px;'><b>Requirements:</b> Windows 7 or later</p>
+        </div>
+
+        <div class='demo'>
+          <div class="single-item">
+            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/loginpage.png' /></div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class='container features'>
+      <div>
+        <h3 class='color-dark-gray'>Simple UI</h3>
+        <p>
+          Good looking and intuitive.
+        </p>
+      </div>
+      <div>
+        <h3 class='color-dark-gray'>Stable, fast, and secure</h3>
+        <p>
+          Works on your on your machine. Requests are encripted and secure.
+        </p>
+      </div>
+      <div>
+        <h3 class='color-dark-gray'>Features</h3>
+        <p>
+          Multiple database bookmarks. Table information. Table indexes. Custom query. Explain query. Query history. Latest activities on database and more..
+        </p>
+      </div>
+    </div>
+
+  </div>
+
+  <div class='footer text-center'>
+    <a href='/for-mac' target='_blank' class='link'>
+      Mac
+    </a>
+    <a href='/for-windows' target='_blank' class='link'>
+      Windows
+    </a>
+    <a href='/support' class='link'>
+      Support
+    </a>
+    <a href='/feedback' class='link'>
+      Feedback
+    </a>
+  </footer>
+
+
   <script>
-    function $(id) {
-      if (document.all)
-        return document.all[id];
-      if (document.getElementById)
-        return document.getElementById(id);
-      for (var i = 1; i < document.layers.length; i++) {
-        if (document.layers[i].id == id)
-          return document.layers[i];
-      }
-      return false;
-    }
+    var LatestUrlWin = "TODO: CHANGE THIS";
 
     function a(url, txt) {
-      return '<a href="' + url + '" class="btn blue" style="margin-right:10px; font-weight:bold;">' + txt + '</a>';
+      return '<a href="' + url + '" class="btn color-blue border-blue" style="margin-right:10px; font-weight:bold;">' + txt + '</a>';
     }
 
     function build_html() {
-      return a(LatestUrlWin, "<span>Download</span>")
+      return a(LatestUrlWin, "<i class='fa fa-windows' style='margin-right: 8px;''></i>Download for Windows");
     }
 
     function myInit() {
-      $("download-button").innerHTML = build_html();
+      console.log($("#download-button").innerHTML);
+      $("#download-button").html(build_html());
+      console.log($("#download-button"));
     }
+
+     var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-63191601-1']);
+    _gaq.push(['_gat._forceSSL']);
+    _gaq.push(['_trackPageview']);
+
+    (function () {
+      var ga = document.createElement('script');
+      ga.type = 'text/javascript';
+      ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(ga, s);
+    })();
+
+    // Slider
+    $('.single-item').slick({
+      dots: true,
+      arrows: true,
+      autoplay: true,
+      autoplaySpeed: 2000,
+      draggable: true,
+      // centerMode: true,
+    });
 
     window.onload = myInit;
   </script>
-</head>
-
-<body>
-  <div id="content">
-    <p></p>
-
-    <table cellspacing="0" cellpadding="0">
-      <tr>
-        <td style="vertical-align: top; min-width:300px; padding-right:32px;	">
-          <h1 style="display:inline;">dbHero</h1>
-          <span>&nbsp;for Windows</span>
-          <p>GUI for Postgres database.</p>
-          <p><b>Requirements:</b> Windows 7 or later</p>
-          <p>
-            <span id="download-button"></span>
-          </p>
-        </td>
-        <td style="vertical-align: top;">
-          <img src="http://i.imgur.com/IGCuvun.png" alt="dbHero screenshot">
-        </td>
-      </tr>
-    </table>
-    <div style="clear:both;">&nbsp;</div>
-    <hr>
-    <center>
-      <span id="footer">by <a href="/">Database Experts</a></span>
-    </center>
-  </div>
-
-</body>
 
 </html>
