website: feedback and support html created

--- a/website/www/feedback.html
+++ b/website/www/feedback.html
@@ -59,11 +59,11 @@
 
         <div class="container">
           <div class="row">
-            <h1 class='color-blue'>Need Help?</h1>
+            <h1 class='color-blue'>Feedback</h1>
           </div>
           <div class="row">
             <div class="col-md-12">
-                <h3>If you have problems or questions, send an e-mail to <a href="mailto:support@dbheroapp.com" class='link' target='blank'>support@dbheroapp.com</a></h3>
+                <h3>If you have comments or suggestions, send an e-mail to <a href="mailto:feedback@dbheroapp.com" class='link' target='blank'>feedback@dbheroapp.com</a></h3>
             </div>
           </div>
 
