website: index.html changed based on win and mac

--- a/website/www/index.html
+++ b/website/www/index.html
@@ -22,10 +22,10 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='#' class='link'>
+          <a href='/for-mac' class='link'>
             Mac
           </a>
-          <a href='#' class='link'>
+          <a href='/for-windows' class='link'>
             Windows
           </a>
           <a href='/support' class='link'>
@@ -97,22 +97,22 @@
       </div>
     </div>
 
-    <div class='container text-center github footer'>
-      <a href='#' target='_blank' class='link'>
-        Mac
-      </a>
-      <a href='#' target='_blank' class='link'>
-        Windows
-      </a>
-      <a href='/support' class='link'>
-        Support
-      </a>
-      <a href='/feedback' class='link'>
-        Feedback
-      </a>
-    </div>
-
   </div>
+
+  <div class='footer text-center'>
+    <a href='/for-mac' target='_blank' class='link'>
+      Mac
+    </a>
+    <a href='/for-windows' target='_blank' class='link'>
+      Windows
+    </a>
+    <a href='/support' class='link'>
+      Support
+    </a>
+    <a href='/feedback' class='link'>
+      Feedback
+    </a>
+  </footer>
 
   <script>
     var _gaq = _gaq || [];
