website: new screenshots for mac

--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -60,9 +60,10 @@
 
         <div class='demo'>
           <div class="single-item">
-            <div><img src='./img/loginpage.png' /></div>
-            <div><img src='./img/loginpage.png' /></div>
-            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/mac-ss1.png' /></div>
+            <div><img src='./img/mac-ss2.png' /></div>
+            <div><img src='./img/mac-ss3.png' /></div>
+            <div><img src='./img/mac-ss4.png' /></div>
           </div>
         </div>
 
