website: updated mac and win webpages

--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -54,8 +54,7 @@
              <i class="fa fa-apple" style="margin-right: 8px;"></i>
               Download for Mac
           </a> -->
-          <span id="download-button"></span>
-          <p style='margin-top: 30px;'><b>Requirements:</b> Windows 7 or later</p>
+            <span id="download-button"></span><span id="requirements"><p style="margin-top: 20px;"><b style="margin-left: 10px;">Requirements:</b> Windows 7 or later</p></span>
         </div>
 
         <div class='demo'>
@@ -142,8 +141,6 @@
     $('.single-item').slick({
       dots: true,
       arrows: true,
-      autoplay: true,
-      autoplaySpeed: 2000,
       draggable: true,
       // centerMode: true,
     });
