--- a/s/index.html
+++ b/s/index.html
@@ -15,6 +15,7 @@
   <link type="text/css" rel="stylesheet" href="/s/css/main.css"/>
 
   <script type="text/javascript">
+    var gVersionNumber = "0.1.4";
     var gUserInfo = null;
     function setUserInfo(json) {
       gUserInfo = json;
