website: show which page we're on

--- a/website/www/feedback.html
+++ b/website/www/feedback.html
@@ -40,7 +40,7 @@
           <a href='/support' class='link'>
             Support
           </a>
-          <a href='/feedback' class='link'>
+          <a href='/feedback' class='link-current'>
             Feedback
           </a>
         </div>
@@ -48,22 +48,14 @@
     </div>
       <div class='window-center'>
 
-
-        <!-- <div class='callouts'>
-          <a href='https://github.com/airbnb/airpal#airpal' target='_blank'
-             class='btn color-blue border-blue'>
-              Get Started
-          </a>
-        </div> -->
-
-
         <div class="container">
           <div class="row">
             <h1 class='color-blue'>Feedback</h1>
           </div>
           <div class="row">
             <div class="col-md-12">
-                <h3>If you have comments or suggestions, send an e-mail to <a href="mailto:feedback@dbheroapp.com" class='link' target='blank'>feedback@dbheroapp.com</a></h3>
+                <h3>If you have comments or suggestions, please send us an e-mail to: <a href="mailto:feedback@dbheroapp.com" class='link' target='blank'>feedback@dbheroapp.com</a></h3>
+                <h3>We'll get back to you promptly.</h3>
             </div>
           </div>
 
