--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -27,7 +27,7 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/for-mac' class='link'>
+          <a href='/for-mac' class='link-current'>
             Mac
           </a>
           <a href='/for-windows' class='link'>
@@ -46,7 +46,7 @@
       <div class='container'>
         <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
-          A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
+          A query execution tool for PostgreSQL.
         </h4>
 
         <div class='callouts'>
