--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -30,7 +30,7 @@
           <a href='/for-mac' class='link'>
             Mac
           </a>
-          <a href='/for-windows' class='link'>
+          <a href='/for-windows' class='link-current'>
             Windows
           </a>
           <a href='/support' class='link'>
