--- a/website/www/support.html
+++ b/website/www/support.html
@@ -37,7 +37,7 @@
           <a href='/for-windows' class='link'>
             Windows
           </a>
-          <a href='/support' class='link'>
+          <a href='/support' class='link-current'>
             Support
           </a>
           <a href='/feedback' class='link'>
@@ -48,22 +48,14 @@
     </div>
       <div class='window-center'>
 
-
-        <!-- <div class='callouts'>
-          <a href='https://github.com/airbnb/airpal#airpal' target='_blank'
-             class='btn color-blue border-blue'>
-              Get Started
-          </a>
-        </div> -->
-
-
         <div class="container">
           <div class="row">
             <h1 class='color-blue'>Need Help?</h1>
           </div>
           <div class="row">
             <div class="col-md-12">
-                <h3>If you have problems or questions, send an e-mail to <a href="mailto:support@dbheroapp.com" class='link' target='blank'>support@dbheroapp.com</a></h3>
+                <h3>If you have problems or questions, please send us an e-mail to: <a href="mailto:support@dbheroapp.com" class='link' target='blank'>support@dbheroapp.com</a></h3>
+                <h3>We'll get back to you promptly.</h3>
             </div>
           </div>
 
