website: use our google analytics code

--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -117,26 +117,9 @@
     }
 
     function myInit() {
-      console.log($("#download-button").innerHTML);
       $("#download-button").html(build_html());
-      console.log($("#download-button"));
     }
 
-     var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-63191601-1']);
-    _gaq.push(['_gat._forceSSL']);
-    _gaq.push(['_trackPageview']);
-
-    (function () {
-      var ga = document.createElement('script');
-      ga.type = 'text/javascript';
-      ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(ga, s);
-    })();
-
-    // Slider
     $('.single-item').slick({
       dots: true,
       arrows: true,
@@ -146,5 +129,17 @@
 
     window.onload = myInit;
   </script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-71335002-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+
 
 </html>
