--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -9,7 +9,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
-  <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Lato:400,900'>
 
   <script src="//kjkpub.s3.amazonaws.com/software/dbhero/latestverwin.js" type="text/javascript"></script>
 
@@ -21,7 +20,6 @@
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel='stylesheet' href="/s/style.css">
-  <!-- <link rel='stylesheet' href="/s/main.css"> -->
 
   <div>
     <div class='nav-container'>
@@ -59,9 +57,10 @@
 
         <div class='demo'>
           <div class="single-item">
-            <div><img src='./img/loginpage.png' /></div>
-            <div><img src='./img/loginpage.png' /></div>
-            <div><img src='./img/loginpage.png' /></div>
+            <div><img src='./img/win-ss1.png' /></div>
+            <div><img src='./img/win-ss2.png' /></div>
+            <div><img src='./img/win-ss3.png' /></div>
+            <div><img src='./img/win-ss4.png' /></div>
           </div>
         </div>
 
