website: small color changes to differeniate from airpal website

--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -44,7 +44,7 @@
       <div class='container'>
         <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
-          A query execution tool for <a href='https://postgresql.org' target='_blank'>PostgreSQL</a>.
+          A GUI database explorer for PostgreSQL.
         </h4>
 
         <div class='callouts'>
