--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -44,7 +44,7 @@
       <div class='container'>
         <h1 class='color-blue'>dbHero</h1>
         <h4 class='subtitle color-dark-gray'>
-          A query execution tool for PostgreSQL.
+          A GUI database explorer for PostgreSQL.
         </h4>
 
         <div class='callouts'>
