--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -74,9 +74,9 @@
         </p>
       </div>
       <div>
-        <h3 class='color-dark-gray'>Stable, fast, and secure</h3>
+        <h3 class='color-dark-gray'>Stable, fast and secure</h3>
         <p>
-          Works on your on your machine. Requests are encripted and secure.
+          Works on your on your machine. Requests are encrypted and secure.
         </p>
       </div>
       <div>
