website: provide feedback when hovering over urls

--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -25,18 +25,11 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/for-mac' class='link'>
-            Mac
-          </a>
-          <a href='/for-windows' class='link-current'>
-            Windows
-          </a>
-          <a href='/support' class='link'>
-            Support
-          </a>
-          <a href='/feedback' class='link'>
-            Feedback
-          </a>
+          <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
+          <a href='/gui-database-workbench-and-explorer-for-windows' class='link-current'>Windows</a>
+          <a href='/support' class='link'>Support</a>
+          <a href='/feedback' class='link'>Feedback</a>
+          &nbsp;&nbsp;
         </div>
       </nav>
     </div>
@@ -90,20 +83,11 @@
   </div>
 
   <div class='footer text-center'>
-    <a href='/for-mac' target='_blank' class='link'>
-      Mac
-    </a>
-    <a href='/for-windows' target='_blank' class='link'>
-      Windows
-    </a>
-    <a href='/support' class='link'>
-      Support
-    </a>
-    <a href='/feedback' class='link'>
-      Feedback
-    </a>
-  </footer>
-
+    <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
+    <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+    <a href='/support' class='link'>Support</a>
+    <a href='/feedback' class='link'>Feedback</a>
+  </div>
 
   <script>
     function a(url, txt) {
