--- a/website/www/feedback.html
+++ b/website/www/feedback.html
@@ -30,18 +30,11 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/for-mac' class='link'>
-            Mac
-          </a>
-          <a href='/for-windows' class='link'>
-            Windows
-          </a>
-          <a href='/support' class='link'>
-            Support
-          </a>
-          <a href='/feedback' class='link-current'>
-            Feedback
-          </a>
+          <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
+          <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+          <a href='/support' class='link'>Support</a>
+          <a href='/feedback' class='link-current'>Feedback</a>
+          &nbsp;&nbsp;
         </div>
       </nav>
     </div>
@@ -64,21 +57,12 @@
     </div>
   </div>
 
-
   <div class='footer text-center'>
-    <a href='/for-mac' target='_blank' class='link'>
-      Mac
-    </a>
-    <a href='/for-windows' target='_blank' class='link'>
-      Windows
-    </a>
-    <a href='/support' class='link'>
-      Support
-    </a>
-    <a href='/feedback' class='link'>
-      Feedback
-    </a>
-  </footer>
+    <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
+    <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+    <a href='/support' class='link'>Support</a>
+    <a href='/feedback' class='link'>Feedback</a>
+  </div>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
