website: tweak urls for SEO again

--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -25,8 +25,8 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link-current'>Mac</a>
-          <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+          <a href='/gui-database-client-for-postgresql-mac-osx' class='link-current'>Mac</a>
+          <a href='/gui-database-client-for-postgresql-windows' class='link'>Windows</a>
           <a href='/support' class='link'>Support</a>
           <a href='/feedback' class='link'>Feedback</a>
           &nbsp;&nbsp;
@@ -82,12 +82,7 @@
 
   </div>
 
-  <div class='footer text-center'>
-    <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
-    <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
-    <a href='/support' class='link'>Support</a>
-    <a href='/feedback' class='link'>Feedback</a>
-  </div>
+  <div class='footer text-center'></div>
 
   <script>
     function a(url, txt) {
