--- a/website/www/feedback.html
+++ b/website/www/feedback.html
@@ -12,8 +12,10 @@
 
   <link rel='stylesheet' href="/s/style.css">
 
-
   <style>
+      body {
+        background-color: #fafbfa;
+      }
       .header {
           color: #36A0FF;
           font-size: 27px;
@@ -30,8 +32,8 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
-          <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+          <a href='/gui-database-client-for-postgresql-mac-osx' class='link'>Mac</a>
+          <a href='/gui-database-client-for-postgresql-windows' class='link'>Windows</a>
           <a href='/support' class='link'>Support</a>
           <a href='/feedback' class='link-current'>Feedback</a>
           &nbsp;&nbsp;
@@ -52,17 +54,11 @@
           </div>
 
         </div>
-
       </div>
     </div>
+
   </div>
 
-  <div class='footer text-center'>
-    <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
-    <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
-    <a href='/support' class='link'>Support</a>
-    <a href='/feedback' class='link'>Feedback</a>
-  </div>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
