--- a/website/www/support.html
+++ b/website/www/support.html
@@ -14,6 +14,9 @@
 
 
   <style>
+      body {
+        background-color: #fafbfa;
+      }
       .header {
           color: #36A0FF;
           font-size: 27px;
@@ -30,8 +33,8 @@
     <div class='nav-container'>
       <nav class='container'>
         <div class='links'>
-          <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
-          <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
+          <a href='/gui-database-client-for-postgresql-mac-osx' class='link'>Mac</a>
+          <a href='/gui-database-client-for-postgresql-windows' class='link'>Windows</a>
           <a href='/support' class='link-current'>Support</a>
           <a href='/feedback' class='link'>Feedback</a>
           &nbsp;&nbsp;
@@ -57,12 +60,7 @@
     </div>
   </div>
 
-  <div class='footer text-center'>
-    <a href='/gui-database-workbench-and-explorer-for-mac-osx' class='link'>Mac</a>
-    <a href='/gui-database-workbench-and-explorer-for-windows' class='link'>Windows</a>
-    <a href='/support' class='link'>Support</a>
-    <a href='/feedback' class='link'>Feedback</a>
-  </div>
+  <div class='footer text-center'></div>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
