--- a/s/index.html
+++ b/s/index.html
@@ -31,10 +31,8 @@
 </head>
 
 <body>
-  <div id ="main">
-  </div>
+  <div id ="main"></div>
 
   <script type="text/javascript">window.runOnLoad(window.appStart);</script>
-
 </body>
 </html>
