win: less debug menus

--- a/s/diagnostic.html
+++ b/s/diagnostic.html
@@ -8,7 +8,9 @@
 
 <body>
 	<p>This is a diagnostic page, no X-UA-Compatible set. Go to <a href="/">main page</a>
-	or <a href="/diagnostic2.html">diagnostic 2 page</a>.</p>
+	or <a href="/diagnostic2.html">diagnostic 2 page</a> or 
+	<a href="https://www.whatismybrowser.com/">whatismybrowser.com</a>.
+	</p>
 	<script type="text/javascript">
 		// this is IE only, doesn't seem available on IE Edge.
 		var docMode = document.documentMode;
