--- a/s/diagnostic2.html
+++ b/s/diagnostic2.html
@@ -9,7 +9,9 @@
 
 <body>
 	<p>This is a diagnostic 2 page, with X-UA-Compatible set. Go to <a href="/">main page</a>
-	or <a href="/diagnostic.html">diagnostic 1 page</a>.</p>
+	or <a href="/diagnostic.html">diagnostic 1 page</a> or 
+	<a href="https://www.whatismybrowser.com/">whatismybrowser.com</a>.
+	</p>
 	<script type="text/javascript">
 		// this is IE only, doesn't seem available on IE Edge.
 		var docMode = document.documentMode;
