--- a/website/www/feedback.html
+++ b/website/www/feedback.html
@@ -1,73 +1,71 @@
 <!doctype html>
 <html lang=en>
-  <meta charset=utf-8>
+<meta charset=utf-8>
 
-  <title>dbHero for PostgreSQL</title>
+<title>dbHero for PostgreSQL</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-  <link rel='stylesheet' href="/s/style.css">
+<link rel='stylesheet' href="/s/style.css">
 
-  <style>
-      body {
-        background-color: #fafbfa;
-      }
-      .header {
-          color: #36A0FF;
-          font-size: 27px;
-          padding: 10px;
-      }
+<style>
+  body {
+    background-color: #fafbfa;
+  }
+  
+  .header {
+    color: #36A0FF;
+    font-size: 27px;
+    padding: 10px;
+  }
+  
+  .bigicon {
+    font-size: 35px;
+    color: #36A0FF;
+  }
+</style>
 
-      .bigicon {
-          font-size: 35px;
-          color: #36A0FF;
-      }
-  </style>
+<div>
+  <div class='nav-container'>
+    <nav class='container'>
+      <div class='links'>
+        <a href='/gui-database-client-for-postgresql-mac-osx' class='link'>Mac</a>
+        <a href='/gui-database-client-for-postgresql-windows' class='link'>Windows</a>
+        <a href='/support' class='link'>Support</a>
+        <a href='/feedback' class='link-current'>Feedback</a> &nbsp;&nbsp;
+      </div>
+    </nav>
+  </div>
+  <div class='window-center'>
 
-  <div>
-    <div class='nav-container'>
-      <nav class='container'>
-        <div class='links'>
-          <a href='/gui-database-client-for-postgresql-mac-osx' class='link'>Mac</a>
-          <a href='/gui-database-client-for-postgresql-windows' class='link'>Windows</a>
-          <a href='/support' class='link'>Support</a>
-          <a href='/feedback' class='link-current'>Feedback</a>
-          &nbsp;&nbsp;
-        </div>
-      </nav>
-    </div>
-      <div class='window-center'>
-
-        <div class="container">
-          <div class="row">
-            <h1 class='color-blue'>Feedback</h1>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-                <h3>If you have comments or suggestions, please send us an e-mail to: <a href="mailto:feedback@dbheroapp.com" class='link' target='blank'>feedback@dbheroapp.com</a></h3>
-                <h3>We'll get back to you promptly.</h3>
-            </div>
-          </div>
-
+    <div class="container">
+      <div class="row">
+        <h1 class='color-blue'>Feedback</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3>If you have comments or suggestions, please send us an e-mail to: <a href="mailto:feedback@dbheroapp.com" class='link' target='blank'>feedback@dbheroapp.com</a></h3>
+          <h3>We'll get back to you promptly.</h3>
         </div>
       </div>
+
     </div>
-
   </div>
+</div>
 
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-71335002-1', 'auto');
     ga('send', 'pageview');
+</script>
 
-  </script>
 </html>
