--- a/website/www/beta.html
+++ b/website/www/beta.html
@@ -10,8 +10,10 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-<link rel='stylesheet' href="/s/style.css">
+<script src="//kjkpub.s3.amazonaws.com/software/dbhero/latestverwinbeta.js" type="text/javascript"></script>
+<script src="//kjkpub.s3.amazonaws.com/software/dbhero/latestvermacbeta.js" type="text/javascript"></script>
 
+<link rel='stylesheet' href="/s/style.css">
 
 <style>
 	body {
@@ -43,14 +45,53 @@
 	</div>
 
 	<div class="container" style="margin-left: 64px; line-height: 1.6em; color: black;">
-		<div><b>Beta builds:</b></div>
-		<div>Windows: <a href="#">windows-installer.zip</a></div>
-		<div>Mac: <a href="#">windows-installer.zip</a></div>
+		<div><b>Beta builds. Note: only for testing, might be more buggy than <a href="/">official builds</a>.</b></div>
+		<table>
+			<tr>
+				<td>Windows&nbsp;</td>
+				<td><span id="dl-win">
+					<a href="#"></a>
+					</span>
+				</td>
+			</tr>
+			<tr>
+				<td>Mac&nbsp;</td>
+				<td><span id="dl-mac">
+					<a href="#"></a>
+					</span>
+				</td>
+			</tr>
+		</table>
 	</div>
 
 </div>
 
 <div class='footer text-center'></div>
+
+<script>
+	function a(url, txt) {
+      return '<a href="' + url + '">' + txt + '</a>';
+    }
+
+    function build_mac_html() {
+      var s = a(LatestUrlMac, LatestVerMac);
+	  return s;
+    }
+
+    function build_win_html() {
+      var s = a(LatestUrlWin, LatestVerWin);
+	  return s;
+    }
+
+    function myInit() {
+	  var s = build_win_html();
+      $("#dl-win").html(s);
+	  s = build_mac_html();
+      $("#dl-mac").html(s);
+    }
+    window.onload = myInit;
+</script>
+
 
 <script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -60,6 +101,7 @@
 
     ga('create', 'UA-71335002-1', 'auto');
     ga('send', 'pageview');
+
 </script>
 
 </html>
