convert to sass

--- a/s/index.html
+++ b/s/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="/s/dist/bundle.js"></script>
   <link type="text/css" rel="stylesheet" href="/s/css/bootstrap-flatly.css"/>
   <link type="text/css" rel="stylesheet" href="/s/css/font-awesome.css"/>
-  <link type="text/css" rel="stylesheet" href="/s/css/main.css"/>
+  <link type="text/css" rel="stylesheet" href="/s/dist/main.css"/>
 
   <script type="text/javascript">
     var gVersionNumber = "0.2.1";
