--- a/website/www/for-windows.html
+++ b/website/www/for-windows.html
@@ -50,10 +50,10 @@
 
         <div class='demo'>
           <div class="single-item">
-            <div><img src='./img/win-ss1.png' /></div>
-            <div><img src='./img/win-ss2.png' /></div>
-            <div><img src='./img/win-ss3.png' /></div>
-            <div><img src='./img/win-ss4.png' /></div>
+            <div class='with-shadow'><img src='./img/win-ss1.png' /></div>
+            <div class='with-shadow'><img src='./img/win-ss2.png' /></div>
+            <div class='with-shadow'><img src='./img/win-ss3.png' /></div>
+            <div class='with-shadow'><img src='./img/win-ss4.png' /></div>
           </div>
         </div>
 
