--- a/website/www/for-mac.html
+++ b/website/www/for-mac.html
@@ -50,10 +50,10 @@
 
         <div class='demo'>
           <div class="single-item">
-            <div><img src='./img/mac-ss3.png' /></div>
-            <div><img src='./img/mac-ss2.png' /></div>
-            <div><img src='./img/mac-ss1.png' /></div>
-            <div><img src='./img/mac-ss4.png' /></div>
+            <div class='with-shadow'><img src='./img/mac-ss3.png' /></div>
+            <div class='with-shadow'><img src='./img/mac-ss2.png' /></div>
+            <div class='with-shadow'><img src='./img/mac-ss1.png' /></div>
+            <div class='with-shadow'><img src='./img/mac-ss4.png' /></div>
           </div>
         </div>
 
@@ -101,6 +101,7 @@
       dots: true,
       arrows: true,
       draggable: true,
+      // lazyLoad: false,
       // centerMode: true,
     });
 
