more flexbox experiments

--- a/s/idx2.html
+++ b/s/idx2.html
@@ -43,7 +43,7 @@
          </div>
 
          <div id="actions">
-           <div class="hi-1">Run query</div>&nbsp;&nbsp;
+           <div class="hi-1">Run query</div>
            <div class="hi-2">Save</div>
          </div>
 
@@ -55,8 +55,10 @@
          </div>
 
          <div id="results-nav">
-            results nav
+           <div>nav1</div>
+           <div>nav2</div>
          </div>
+
        </div>
     </div>
 
